--- a/data-raw/simple-examples.bib
+++ b/data-raw/simple-examples.bib
@@ -6,6 +6,25 @@
     urldate= {2023-05-08},
     keywords={primary, moonist}
 }
+
+@Manual{R-core,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2023},
+  url = {https://www.R-project.org/},
+}
+
+@Manual{R-utils,
+  title = {R.utils: Various Programming Utilities},
+  author = {Henrik Bengtsson},
+  year = {2023},
+  note = {R package version 2.12.3, 
+https://github.com/HenrikBengtsson/R.utils},
+  url = {https://henrikbengtsson.github.io/R.utils/},
+}
+
 @Misc{bibtex,
   author = {Patashnik, Oren},
   year = {1988},
@@ -39,3 +58,12 @@
   number = {1},
 }
  
+@misc{engel2024moonism,
+  title={Moonism and Science},
+  url={osf.io/s2ptw},
+  DOI={10.17605/OSF.IO/S2PTW},
+  publisher={OSF},
+  author={Engel, Alan},
+  year={2024},
+  month={Jan}
+}
