--- a/inst/extdata/icusbib-raw/icus01.bib
+++ b/inst/extdata/icusbib-raw/icus01.bib
@@ -1,8 +1,12 @@
-icus.data Data Version 0.8.0
+icus.data Data Version 0.9.1
+2024-01-31 Add editora and editoratype fields to Proceedings 
+  entry for conference chairpersons
 
 @Proceedings{ICUS01,
 title={Moral Orientation of the Sciences},
 titleaddon={First International Conference on Unified Science},
+editora = {Laszlo, Ervin and Haskell, E.F.},
+editoratype = {organizer},
 shorttitle={ICUS I},
 eventdate={1972-11-23/1972-11-26},
 venue={Waldorf-Astoria Hotel},
