--- a/inst/extdata/icusbib-raw/icus02.bib
+++ b/inst/extdata/icusbib-raw/icus02.bib
@@ -1,8 +1,12 @@
-icus.data Data Version 0.8.0
+icus.data Data Version 0.9.1
+2024-01-31 Add editora and editoratype fields to Proceedings 
+  entry for conference chairpersons
 
 @Proceedings{ICUS02,
 title={Modern Science and Moral Values},
 titleaddon={Second International Conference on the Unity of the Sciences},
+editora = {Sawada, Nobushige and Yosida, N.},
+editoratype = {organizer},
 shorttitle={ICUS II},
 eventdate={1973-11-18/1973-11-21},
 venue={Imperial Hotel},
@@ -17,7 +21,7 @@ keywords={primary, program, moonist}
 @InProceedings{ICUS02:P01,
 crossref={ICUS02},
 title={Opening Address},
-author={Sawada, Nobusige}
+author={Sawada, Nobushige}
 }
 
 @InProceedings{ICUS02:P02,
