--- a/inst/extdata/icusbib-raw/icus03.bib
+++ b/inst/extdata/icusbib-raw/icus03.bib
@@ -1,8 +1,12 @@
-icus.data Data Version 0.8.0
+icus.data Data Version 0.9.1
+2024-01-31 Add editora and editoratype fields to Proceedings 
+  entry for conference chairpersons
 
 @Proceedings{ICUS03,
 title={Science and Absolute Values},
 titleaddon={Third International Conference on the Unity of the Sciences},
+editora = {Adrian, Edgar Douglas and Mellanby, Kenneth and Jones, Reginald V.},
+editoratype = {organizer},
 shorttitle={ICUS III},
 eventdate={1974-11-21/1974-11-24},
 venue={Royal Lancaster Hotel},
