--- a/inst/extdata/icusbib-raw/icus05.bib
+++ b/inst/extdata/icusbib-raw/icus05.bib
@@ -1,8 +1,12 @@
-icus.data Data Version 0.8.0
+icus.data Data Version 0.9.1
+2024-01-31 Add editora and editoratype fields to Proceedings 
+  entry for conference chairpersons
 
 @Proceedings{ICUS05,
   title = {The Search for Absolute Values: Harmony Among the Sciences},
   titleaddon = {The Fifth International Conference on the Unity of the Sciences},
+  editora = {Eccles, John Carew},
+  editoratype = {organizer},
   shorttitle = {ICUS V},
   eventdate = {1976-11-26/1976-11-28},
   venue = {The Washington Hilton},
