--- a/inst/extdata/icusbib-raw/icus06.bib
+++ b/inst/extdata/icusbib-raw/icus06.bib
@@ -1,8 +1,12 @@
-icus.data Data Version 0.8.0
+icus.data Data Version 0.9.1
+2024-01-31 Add editora and editoratype fields to Proceedings 
+  entry for conference chairpersons
 
 @Proceedings{ICUS06,
   title = {The Search for Absolute Values in a Changing World},
   titleaddon = {The Sixth International Conference on the Unity of the Sciences},
+  editora = {Eccles, John Carew},
+  editoratype = {organizer},
   shorttitle = {ICUS VI},
   eventdate = {1977-11-25/1977-11-27},
   venue = {Fairmont Hotel},
