--- a/inst/extdata/icusbib-raw/icus07.bib
+++ b/inst/extdata/icusbib-raw/icus07.bib
@@ -1,8 +1,12 @@
-icus.data Data Version 0.8.0
+icus.data Data Version 0.9.1
+2024-01-31 Add editora and editoratype fields to Proceedings 
+  entry for conference chairpersons
 
 @Proceedings{ICUS07,
   title = {The re-evaluation of existing values and the search for absolute values},
   titleaddon = {The Seventh International Conference on the Unity of the Sciences},
+  editora = {Wigner, Eugene P. and Eccles, John Carew},
+  editoratype = {organizer},
   shorttitle = {ICUS VII},
   eventdate = {1978-11-24/1978-11-26},
   venue = {Sheraton-Boston Hotel},
