--- a/inst/extdata/icusbib-raw/icus08.bib
+++ b/inst/extdata/icusbib-raw/icus08.bib
@@ -1,8 +1,12 @@
-icus.data Data Version 0.8.0
+icus.data Data Version 0.9.1
+2024-01-31 Add editora and editoratype fields to Proceedings 
+  entry for conference chairpersons
 
 @Proceedings{ICUS08,
   title = {The responsibility of the academic community in the search for absolute values},
   titleaddon = {The Eighth International Conference on the Unity of the Sciences},
+  editora = {Wigner, Eugene P. and Eccles, John Carew},
+  editoratype = {organizer},
   shorttitle = {ICUS VIII},
   eventdate = {1979-11-22/1979-11-25},
   venue = {Century Plaza Hotel},
