--- a/inst/extdata/icusbib-raw/icus11.bib
+++ b/inst/extdata/icusbib-raw/icus11.bib
@@ -1,8 +1,12 @@
-icus.data Data Version 0.8.0
+icus.data Data Version 0.9.1
+2024-01-31 Add editora and editoratype fields to Proceedings 
+  entry for conference chairpersons
 
 @Proceedings{ICUS11,
   title = {The Search for Absolute Values and the Creation of the New World},
   titleaddon = {Eleventh International Conference on the Unity of the Sciences},
+  editora = {Kaplan, Morton A. and Weinberg, Alvin M.},
+  editoratype = {organizer},
   shorttitle = {ICUS XI},
   eventdate = {1982-11-25/1982-11-28},
   venue = {Franklin Plaza Hotel},
