--- a/inst/extdata/icusbib-raw/icus17.bib
+++ b/inst/extdata/icusbib-raw/icus17.bib
@@ -1,8 +1,12 @@
-icus.data Data Version 0.8.0
+icus.data Data Version 0.9.1
+2024-01-31 Add editora and editoratype fields to Proceedings 
+  entry for conference chairpersons
 
 @Proceedings{ICUS17,
   title = {Absolute Values and the Reassessment of the Contemporary World},
   titleaddon = {Seventeenth International Conference on the Unity of the Sciences},
+  editora = {Weinberg, Alvin M. and Higatsberger, Michael and Cappelletti, Vincenzo},
+  editoratype = {organizer},
   shorttitle = {ICUS XVII},
   eventdate = {1988-11-24/1988-11-27},
   venue = {Stouffer Concourse Hotel},
