--- a/inst/extdata/icusbib-raw/icus18.bib
+++ b/inst/extdata/icusbib-raw/icus18.bib
@@ -1,8 +1,12 @@
-icus.data Data Version 0.8.0
+icus.data Data Version 0.9.1
+2024-01-31 Add editora and editoratype fields to Proceedings 
+  entry for conference chairpersons
 
 @Proceedings{ICUS18,
   title = {Absolute Values and the Reassessment of the Contemporary World},
   titleaddon = {Eighteenth International Conference on the Unity of the Sciences},
+  editora = {Weinberg, Alvin M. and Higatsberger, Michael and Gerholm, Tor Ragnar and Yoon, Se Won},
+  editoratype = {organizer},
   shorttitle = {ICUS XVIII},
   eventdate = {1991-08-23/1991-08-26},
   venue = {Sheraton Walker Hill Hotel},
