--- a/inst/extdata/icusbib-raw/icus04.bib
+++ b/inst/extdata/icusbib-raw/icus04.bib
@@ -1,8 +1,12 @@
-icus.data Data Version 0.8.0
+icus.data Data Version 0.9.1
+2024-01-31 Add editora and editoratype fields to Proceedings 
+  entry for conference chairpersons
 
 @Proceedings{ICUS04,
   title = {The Centrality of Science and Absolute Values},
   titleaddon = {The Fourth International Conference on the Unity of the Sciences},
+  editora = {Mulliken, Robert S.},
+  editoratype = {organizer},
   shorttitle = {ICUS IV},
   eventdate = {1975-11-27/1975-11-30},
   venue = {Waldorf-Astoria Hotel},
