--- a/inst/extdata/icusbib-raw/icus09.bib
+++ b/inst/extdata/icusbib-raw/icus09.bib
@@ -1,8 +1,12 @@
-icus.data Data Version 0.8.0
+icus.data Data Version 0.9.1
+2024-01-31 Add editora and editoratype fields to Proceedings 
+  entry for conference chairpersons
 
 @Proceedings{ICUS09,
   title = {Absolute Values and the Search for the Peace of Mankind},
   titleaddon = {The Eighth International Conference on the Unity of the Sciences},
+  editora = {Kaplan, Morton A. and Wigner, Eugene P.},
+  editoratype = {organizer},
   shorttitle = {ICUS IX},
   eventdate = {1980-11-27/1980-11-30},
   venue = {Fontainebleau Hilton Hotel},
