--- a/inst/extdata/icusbib-raw/icus10.bib
+++ b/inst/extdata/icusbib-raw/icus10.bib
@@ -1,8 +1,12 @@
-icus.data Data Version 0.8.0
+icus.data Data Version 0.9.1
+2024-01-31 Add editora and editoratype fields to Proceedings 
+  entry for conference chairpersons
 
 @Proceedings{ICUS10,
   title = {The Search for Absolute Values and the Creation of the New World},
   titleaddon = {Tenth International Conference on the Unity of the Sciences},
+  editora = {Kaplan, Morton A. and {von Euler}, Ulfe Svante},
+  editoratype = {organizer},
   shorttitle = {ICUS X},
   eventdate = {1981-11-09/1981-11-13},
   venue = {Hotel Lotte},
