--- a/inst/extdata/icusbib-raw/icus20.bib
+++ b/inst/extdata/icusbib-raw/icus20.bib
@@ -1,8 +1,12 @@
-icus.data Data Version 0.8.0
+icus.data Data Version 0.9.1
+2024-01-31 Add editora and editoratype fields to Proceedings 
+  entry for conference chairpersons
 
 @Proceedings{ICUS20,
   title = {Absolute Values and the Unity of the Sciences: The Origin and Human Responsibility},
   titleaddon = {Twentieth International Conference on the Unity of the Sciences},
+  editora = {Gerholm, Tor Ragnar and Yoon, Se Won},
+  editoratype = {organizer},
   shorttitle = {ICUS XX},
   eventdate = {1995-08-21/1995-08-25},
   venue = {Sheraton Walker Hill Hotel},
