--- a/inst/extdata/icusbib-raw/icus22.bib
+++ b/inst/extdata/icusbib-raw/icus22.bib
@@ -1,8 +1,12 @@
-icus.data Data Version 0.8.0
+icus.data Data Version 0.9.1
+2024-01-31 Add editora and editoratype fields to Proceedings 
+  entry for conference chairpersons
 
 @Proceedings{ICUS22,
   title = {Absolute Values and the Unity of the Sciences: Science for the Benefit of Humanity},
   titleaddon = {Twenty-second International Conference on the Unity of the Sciences},
+  editora = {Gerholm, Tor Ragnar and Rubenstein, Richard L. and Higatsberger, Michael},
+  editoratype = {organizer},
   shorttitle = {ICUS XXII},
   eventdate = {2000-02-09/2000-02-13},
   venue = {Lotte Hotel},
