--- a/inst/extdata/icusbib-raw/icus01.bib
+++ b/inst/extdata/icusbib-raw/icus01.bib
@@ -1,4 +1,4 @@
-icus.data Data Version 0.9.1
+icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
 
@@ -6,7 +6,7 @@ icus.data Data Version 0.9.1
 title={Moral Orientation of the Sciences},
 titleaddon={First International Conference on Unified Science},
 editora = {Laszlo, Ervin and Haskell, E.F.},
-editoratype = {organizer},
+editoratype = {chairperson},
 shorttitle={ICUS I},
 eventdate={1972-11-23/1972-11-26},
 venue={Waldorf-Astoria Hotel},
