--- a/inst/extdata/icusbib-raw/icus02.bib
+++ b/inst/extdata/icusbib-raw/icus02.bib
@@ -1,4 +1,4 @@
-icus.data Data Version 0.9.1
+icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
 
@@ -6,7 +6,7 @@ icus.data Data Version 0.9.1
 title={Modern Science and Moral Values},
 titleaddon={Second International Conference on the Unity of the Sciences},
 editora = {Sawada, Nobushige and Yosida, N.},
-editoratype = {organizer},
+editoratype = {chairperson},
 shorttitle={ICUS II},
 eventdate={1973-11-18/1973-11-21},
 venue={Imperial Hotel},
