--- a/inst/extdata/icusbib-raw/icus04.bib
+++ b/inst/extdata/icusbib-raw/icus04.bib
@@ -1,4 +1,4 @@
-icus.data Data Version 0.9.1
+icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
 
@@ -6,7 +6,7 @@ icus.data Data Version 0.9.1
   title = {The Centrality of Science and Absolute Values},
   titleaddon = {The Fourth International Conference on the Unity of the Sciences},
   editora = {Mulliken, Robert S.},
-  editoratype = {organizer},
+  editoratype = {chairperson},
   shorttitle = {ICUS IV},
   eventdate = {1975-11-27/1975-11-30},
   venue = {Waldorf-Astoria Hotel},
