--- a/inst/extdata/icusbib-raw/icus06.bib
+++ b/inst/extdata/icusbib-raw/icus06.bib
@@ -1,4 +1,4 @@
-icus.data Data Version 0.9.1
+icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
 
@@ -6,7 +6,7 @@ icus.data Data Version 0.9.1
   title = {The Search for Absolute Values in a Changing World},
   titleaddon = {The Sixth International Conference on the Unity of the Sciences},
   editora = {Eccles, John Carew},
-  editoratype = {organizer},
+  editoratype = {chairperson},
   shorttitle = {ICUS VI},
   eventdate = {1977-11-25/1977-11-27},
   venue = {Fairmont Hotel},
