--- a/inst/extdata/icusbib-raw/icus07.bib
+++ b/inst/extdata/icusbib-raw/icus07.bib
@@ -1,4 +1,4 @@
-icus.data Data Version 0.9.1
+icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
 
@@ -6,14 +6,14 @@ icus.data Data Version 0.9.1
   title = {The re-evaluation of existing values and the search for absolute values},
   titleaddon = {The Seventh International Conference on the Unity of the Sciences},
   editora = {Wigner, Eugene P. and Eccles, John Carew},
-  editoratype = {organizer},
+  editoratype = {chairperson},
   shorttitle = {ICUS VII},
   eventdate = {1978-11-24/1978-11-26},
   venue = {Sheraton-Boston Hotel},
   organization = {International Cultural Foundation},
   location = {Boston, MA},
   date = {1978},
-  url ={https://icus.org/wp-content/uploads/2016/02/ICUS-VI-Program.pdf},
+  url ={https://icus.org/wp-content/uploads/2016/02/ICUS-VII-Program.pdf},
   urldate={2023-05-12},
   keywords={primary, program, moonist}
 }
