--- a/inst/extdata/icusbib-raw/icus10.bib
+++ b/inst/extdata/icusbib-raw/icus10.bib
@@ -1,4 +1,4 @@
-icus.data Data Version 0.9.1
+icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
 
@@ -6,7 +6,7 @@ icus.data Data Version 0.9.1
   title = {The Search for Absolute Values and the Creation of the New World},
   titleaddon = {Tenth International Conference on the Unity of the Sciences},
   editora = {Kaplan, Morton A. and {von Euler}, Ulfe Svante},
-  editoratype = {organizer},
+  editoratype = {chairperson},
   shorttitle = {ICUS X},
   eventdate = {1981-11-09/1981-11-13},
   venue = {Hotel Lotte},
