--- a/inst/extdata/icusbib-raw/icus12.bib
+++ b/inst/extdata/icusbib-raw/icus12.bib
@@ -1,4 +1,4 @@
-icus.data Data Version 0.9.1
+icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
 
@@ -6,7 +6,7 @@ icus.data Data Version 0.9.1
   title = {Absolute Values and the New Cultural Revolution},
   titleaddon = {Twelfth International Conference on the Unity of the Sciences},
   editora = {Wigner, Eugene P. and Kaplan, Morton A. and Weinberg, Alvin M.},
-  editoratype = {organizer},
+  editoratype = {chairperson},
   shorttitle = {ICUS XII},
   eventdate = {1983-11-24/1983-11-27},
   venue = {Chicago Marriott Hotel},
