--- a/inst/extdata/icusbib-raw/icus13.bib
+++ b/inst/extdata/icusbib-raw/icus13.bib
@@ -1,4 +1,4 @@
-icus.data Data Version 0.9.1
+icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
 
@@ -6,7 +6,7 @@ icus.data Data Version 0.9.1
   title = {Absolute Values and the New Cultural Revolution},
   titleaddon = {Thirteenth International Conference on the Unity of the Sciences},
   editora = {Mellanby, Kenneth and King, Alexander and {Villee Jr.}, Claude A.},
-  editoratype = {organizer},
+  editoratype = {chairperson},
   shorttitle = {ICUS XIII},
   eventdate = {1984-09-02/1984-09-05},
   venue = {J.W. Marriott Hotel},
