--- a/inst/extdata/icusbib-raw/icus14.bib
+++ b/inst/extdata/icusbib-raw/icus14.bib
@@ -1,4 +1,4 @@
-icus.data Data Version 0.9.1
+icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
 
@@ -6,7 +6,7 @@ icus.data Data Version 0.9.1
   title = {Absolute Values and the New Cultural Revolution},
   titleaddon = {Fourteenth International Conference on the Unity of the Sciences},
   editora = {Mellanby, Kenneth and Gerholm, Tor Ragnar and King, Alexander},
-  editoratype = {organizer},
+  editoratype = {chairperson},
   shorttitle = {ICUS XIV},
   eventdate = {1985-11-28/1985-12-01},
   venue = {Hotel Intercontinental},
