--- a/inst/extdata/icusbib-raw/icus15.bib
+++ b/inst/extdata/icusbib-raw/icus15.bib
@@ -1,4 +1,4 @@
-icus.data Data Version 0.9.1
+icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
 
@@ -6,7 +6,7 @@ icus.data Data Version 0.9.1
   title = {Absolute Values and the New Cultural Revolution},
   titleaddon = {Fifteenth International Conference on the Unity of the Sciences},
   editora = {Mellanby, Kenneth and Weinberg, Alvin M. and King, Alexander},
-  editoratype = {organizer},
+  editoratype = {chairperson},
   shorttitle = {ICUS XV},
   eventdate = {1986-11-27/1986-11-30},
   venue = {J.W. Marriott Hotel},
