--- a/inst/extdata/icusbib-raw/icus16.bib
+++ b/inst/extdata/icusbib-raw/icus16.bib
@@ -1,4 +1,4 @@
-icus.data Data Version 0.9.1
+icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
 
@@ -6,7 +6,7 @@ icus.data Data Version 0.9.1
   title = {Absolute Values and the Reassessment of the Contemporary World},
   titleaddon = {Sixteenth International Conference on the Unity of the Sciences},
   editora = {Weinberg, Alvin M. and Gerholm, Tor Ragnar and Fukuda, Nobuyuki},
-  editoratype = {organizer},
+  editoratype = {chairperson},
   shorttitle = {ICUS XVI},
   eventdate = {1987-11-26/1987-11-29},
   venue = {Stouffer Waverly Hotel},
