--- a/inst/extdata/icusbib-raw/icus17.bib
+++ b/inst/extdata/icusbib-raw/icus17.bib
@@ -1,4 +1,4 @@
-icus.data Data Version 0.9.1
+icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
 
@@ -6,7 +6,7 @@ icus.data Data Version 0.9.1
   title = {Absolute Values and the Reassessment of the Contemporary World},
   titleaddon = {Seventeenth International Conference on the Unity of the Sciences},
   editora = {Weinberg, Alvin M. and Higatsberger, Michael and Cappelletti, Vincenzo},
-  editoratype = {organizer},
+  editoratype = {chairperson},
   shorttitle = {ICUS XVII},
   eventdate = {1988-11-24/1988-11-27},
   venue = {Stouffer Concourse Hotel},
