--- a/inst/extdata/icusbib-raw/icus19.bib
+++ b/inst/extdata/icusbib-raw/icus19.bib
@@ -1,4 +1,4 @@
-icus.data Data Version 0.9.1
+icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
 
@@ -6,7 +6,7 @@ icus.data Data Version 0.9.1
   title = {Absolute Values and the New World Order},
   titleaddon = {Nineteenth International Conference on the Unity of the Sciences},
   editora = {Gerholm, Tor Ragnar and Pincheira, Guido and Yoon, Se Won},
-  editoratype = {organizer},
+  editoratype = {chairperson},
   shorttitle = {ICUS XIX},
   eventdate = {1992-08-19/1992-08-22},
   venue = {Hotel Inter-Continental},
