--- a/inst/extdata/icusbib-raw/icus21.bib
+++ b/inst/extdata/icusbib-raw/icus21.bib
@@ -1,4 +1,4 @@
-icus.data Data Version 0.9.1
+icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
 
@@ -6,7 +6,7 @@ icus.data Data Version 0.9.1
   title = {Absolute Values and the Unity of the Sciences: Science for the Benefit of Humanity},
   titleaddon = {Twenty-first International Conference on the Unity of the Sciences},
   editora = {Gerholm, Tor Ragnar and Rubenstein, Richard L. and Jerome, Norge W.},
-  editoratype = {organizer},
+  editoratype = {chairperson},
   shorttitle = {ICUS XXI},
   eventdate = {1997-11-24/1997-11-29},
   venue = {Washington Hilton and Tower},
