--- a/inst/extdata/icusbib-raw/icus22.bib
+++ b/inst/extdata/icusbib-raw/icus22.bib
@@ -1,4 +1,4 @@
-icus.data Data Version 0.9.1
+icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
 
@@ -6,7 +6,7 @@ icus.data Data Version 0.9.1
   title = {Absolute Values and the Unity of the Sciences: Science for the Benefit of Humanity},
   titleaddon = {Twenty-second International Conference on the Unity of the Sciences},
   editora = {Gerholm, Tor Ragnar and Rubenstein, Richard L. and Higatsberger, Michael},
-  editoratype = {organizer},
+  editoratype = {chairperson},
   shorttitle = {ICUS XXII},
   eventdate = {2000-02-09/2000-02-13},
   venue = {Lotte Hotel},
