--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,6 @@
 ---
 output: github_document
-title: README for icus.data
+title: R data package icus.data
 author: Alan Engel
 date: January 31, 2024
 lang: "en-us"
@@ -8,9 +8,7 @@ output_format: github_document
 bibliography: bibliography.bib
 link-citations: true
 ---
-# icus.data
-
-## Introduction
+# Introduction
 Between 1972 and 2000, Sun Myung Moon's organizations sponsored 22 conferences 
 on the unity of science. The aim was to bring science under the moral guidance 
 of Moon's organizations and their theology. The programs list 2045 participants, 
@@ -20,7 +18,7 @@ aims to research these conferences from multiple viewpoints.
 This dataset provides several components for researchers who wish to take a deeper
 look into these conferences.
 
-## Datasets
+# Datasets
 
 1. __participants__ Table of 2045 people who have been
 listed in ICUS programs as speakers, moderators, discussants,
@@ -39,7 +37,7 @@ and final thirds of the ICUS conferences that ran from 1992 to 2000.
 
 6. __icusbib__ Biblatex entries for 1658 speeches and presentations in ICUS.
 
-## Special vignettes
+# Special vignettes
 
 1. __icus program observations__ Observations from ICUS program brochures
 including, for example, attendence by Sun Myung Moon and his wife Han Hakja,
@@ -49,7 +47,7 @@ for use in Set entries in _icusbib__.
 2. __build-package__ A vignette detailing the workflow for building this R data
 package. I am a memory-challenged novice and this is the result of a lot of trial and error.
 
-## Installation
+# Installation
 
 You can install the latest version of __icus.data__ from [github](https://github.com/kijinosu/icus.data) with:
 
@@ -58,9 +56,9 @@ library(devtools)
 devtools::install_github("kijinosu/icus.data")
 ```
 
-## Examples
+# Examples
 
-### Plot participant counts by year
+## Plot participant counts by year
 
 Load libraries.
 
@@ -80,7 +78,7 @@ ggplot(data = progs) +
 
 
 
-### Most frequent participants
+## Most frequent participants
 
 ```{r, most-frequent-participants, echo=TRUE}
 activeparts <- tp %>%
@@ -94,7 +92,7 @@ activeparts <- tp %>%
 knitr::kable(activeparts[1:20, ], caption = "Most frequent participants")
 ```
 
-### Search on speaker
+## Search on speaker
 
 ```{r, person-search}
 icusbib[author = "^Oates"]
@@ -102,7 +100,7 @@ icusbib[author = "^Oates"]
 
 See [Search examples](https://kijinosu.github.io/icus.data/search-examples.html) for more examples.
 
-## R packages used for this data package
+# R packages used for this data package
 
 * DataPackageR - Set up and put the pieces together [@R-DataPackageR]
 * RefManageR - Load and process raw BibLatex files [@RefManageR2017]
@@ -110,4 +108,4 @@ and [@RefManageR2014]
 * [@R-tidyverse]
 * [@R-data.table]
 
-## References
+# References
